[package]
name = "cue2m3u"
version = "0.1.0"
authors = [
  "Andy Dirnberger <andy.dirnberger@gmail.com>",
]
edition = "2018"
description = "Generate playlists for disc-based games."
readme = "README.md"
repository = "https://github.com/dirn/cue2m3u"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
walkdir = "2.3.2"
